--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="title">
-
+        <h1 class="label">Chasse au tresor collabarative</h1>
     </div>
 
     <div id="main">
@@ -20,7 +20,7 @@
 
         </div>
         <div>
-            
+
         </div>
     </div>
     <table id="table"></table>
