CSS, player table

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 
     <div id="main">
         <div>
-            <table id="infoTable"></table>
+            <table id="playersInfo"></table>
+            <table id="bankInfo"></table>
         </div>
-        <div>
+        <div class="board-wrapper">
             <table id="table"></table> <!--Creates with post fetch in js-->
+            <p id="waitTimeText"></p>
+            <p id="cheatTable"></p>
         </div>
         <div>
             <div class="section">
